--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ name: Publish Docker image
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '* 8,16 * * *'
+    - cron:  '0 8,16 * * *'
 
 jobs:
   push_to_registry:
