--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,8 +2,8 @@ name: Publish Docker image
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 8,16 * * *'
+  # schedule:
+    # - cron: '0 8,16 * * *'
 
 jobs:
   push_last_tag_to_registry:
